<resources>
    <string name="app_name">BLE TPMS</string>
    <string name="title_home">Inicio</string>
    <string name="title_pair">Emparejar</string>
    <string name="title_vehicles">Mis vehículos</string>
    <string name="title_settings">Ajustes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>

    <!-- Location Dialog-->
    <string name="location_message">"A partir de Android M (6.0), el sistema requiere que las aplicaciones tengan acceso a la ubicación para buscar dispositivos BLE. "</string>
    <string name="location_title">Permiso de localización necesario</string>

    <!-- Pair -->
    <string name="pair_bind">Emparejar</string>
    <string name="pair_unbind">Desemparejar</string>
    <string name="pair_unbind_title">Desemparejar dispositivo</string>
    <string name="pair_unbind_message">¿Está seguro?</string>
    <string name="pair_auto">Automático</string>
    <string name="pair_auto_text">Seleccione \"Buscar\" e instale el sensor  en el neumático.Espere al menos 5 segundos. Si el dispositivo no se encuentra, desinstale y repita el proceso.</string>
    <string name="pair_auto_search">Buscar</string>
    <string name="pair_auto_searching">Buscando…</string>
    <string name="pair_auto_search_not_found">No se han encontrado dispositivos. Por favor, repita el proceso.</string>
    <string name="pair_manual">Manual</string>
    <string name="pair_manual_save">Guardar</string>
    <string name="pair_manual_hint">Identificador del dispositivo</string>

    <!-- Preference Titles -->
    <string name="temperature_header">Temperatura</string>
    <string name="pressure_header">Presión</string>
    <string name="ui_header">Interfaz</string>

    <!-- Temperature Preferences -->
    <string name="temperature_unit">Unidad</string>
    <string name="temperature_unit_def_value" translatable="false">celsius</string>
    <string name="temperature_upper_limit">Límite <b>superior</b> de advertencia</string>

    <!-- Pressure Preferences -->
    <string name="pressure_unit">Unidad</string>
    <string name="pressure_unit_def_value" translatable="false">BAR</string>
    <string name="pressure_limits">Límites de advertencia</string>
    <string name="pressure_limits_activity">Seleccione los límites de advertencia para la presión</string>

    <!-- UI Preferences -->
    <string name="theme_title">Tema</string>
    <string name="theme_entry_system">Usar ajustes del sistema</string>
    <string name="theme_entry_light">Claro</string>
    <string name="theme_entry_dark">Oscuro</string>
    <string name="theme_def_value" translatable="false">MODE_NIGHT_FOLLOW_SYSTEM</string>

    <!-- Reset Preferences -->
    <string name="reset_settings">Restablecer ajustes</string>
    <string name="reset_settings_summary">Restablece todos los ajustes a los valores predeterminados</string>
    <string name="reset_settings_dialog">¿Restablecer a los valores predeterminados?</string>

    <!-- About Preferences -->
    <string name="about_title">Acerca de</string>
    <string name="about_message" translatable="false">Ignacio Bermejo Álvarez - 2021. Escuela Ingeniería Informática - Universidad de Oviedo.</string>
    <string name="about_link" translatable="false"><a href="https://github.com/ignaciobermejo/TPMS-app">https://github.com/ignaciobermejo/TPMS-app</a></string>

    <!-- Content description -->
    <string name="vehicle_image" translatable="false">vehicle image</string>
    <string name="add_new_vehicle" translatable="false">Add new vehicle</string>
    <string name="_60s" translatable="false">60s</string>
    <string name="vehicle_name">Nombre del vehículo</string>
    <string name="select_number_of_wheels">Seleccione el tipo de vehículo</string>
    <string name="save">Guardar</string>
    <string name="content_description_delete" translatable="false">content_description_delete</string>
    <string name="content_description_edit" translatable="false">content_description_edit</string>
    <string name="content_description_set_main" translatable="false">content_description_set_main</string>
    <string name="delete_contextual_menu" translatable="false">delete</string>
    <string name="edit_contextual_menu" translatable="false">edit</string>
    <string name="main_contextual_menu" translatable="false">main</string>
    <string name="_24_c_card_example" translatable="false">24ºC</string>
    <string name="_306_0_card_example" translatable="false">306.0</string>
    <string name="bar_card_example" translatable="false">BAR</string>
    <string name="no_pressure_data" translatable="false">--</string>
    <string name="no_temperature_data" translatable="false">--</string>
    <string name="celsius_default_unit" translatable="false">ºC</string>
    <string name="pressure_default_unit" translatable="false">BAR</string>
    <string name="signal_icon" translatable="false">signal icon</string>
    <string name="pressure_icon" translatable="false">pressure icon</string>
    <string name="temperature_icon" translatable="false">temperature icon</string>
    <string name="battery_icon" translatable="false">battery icon</string>
    <string name="main_vehicle_icon" translatable="false">main vehicle icon</string>
    <string name="vehicle_selected_icon" translatable="false">vehicle selected icon</string>
    <string name="vehicle_type_image" translatable="false">vehicle type image</string>
    <string name="cannot_delete_main">El vehículo principal no puede ser eliminado</string>
    <string name="toast_vehicle_name">Por favor, ingrese el nombre del vehículo</string>
    <string name="toast_vehicle_type">Por favor, seleccione el tipo de vehículo</string>
    <string name="toast_manual_pair">El identificador tiene que ser de 6 caracteres</string>
</resources>