<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bletpms.app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pair"
        android:name="com.bletpms.app.ui.pair.PairFragment"
        android:label="@string/title_pair"
        tools:layout="@layout/fragment_pair" />

    <fragment
        android:id="@+id/navigation_vehicles"
        android:name="com.bletpms.app.ui.vehicles.VehiclesFragment"
        android:label="@string/title_vehicles"
        tools:layout="@layout/fragment_vehicles" />

 <!--   <fragment
        android:id="@+id/navigation_settings"
        android:name="com.bletpms.app.ui.settings.SettingsFragment"
        android:label="@string/title_settings"/>-->

</navigation>