<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="4dp"
    android:paddingRight="4dp">

    <Button
        android:id="@+id/pairDeviceAutoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/amber_600"
        android:padding="20dp"
        android:text="@string/pair_auto" />

    <Button
        android:id="@+id/pairDeviceManualButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/amber_600"
        android:padding="20dp"
        android:text="@string/pair_manual" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/pairDeviceUnbindButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/grey_300"
        android:padding="20dp"
        android:text="@string/pair_unbind" />

</LinearLayout>